# datos.gob.do-MCP-server

./: .gitignore  LICENSE  README.es.md  README.md  ckan.js  index.js  package.json  pyproject.toml  server.json  tools.js
.github/workflows/: ci.yml
src/datosgobdo_mcp/: __init__.py  analytics.py  cache.py  ckan.py  download.py  preview.py  server.py
tests/: conftest.py  test_analytics.py  test_cache.py  test_ckan.py  test_download.py  test_live_api.py  test_preview.py
