[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datosgobdo-mcp"
version = "0.1.0"
description = "Servidor MCP para datos.gob.do — datos abiertos de la República Dominicana (CKAN 2.11)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alberto Castillo Aroca" }]
keywords = [
    "mcp",
    "datos-abiertos",
    "republica-dominicana",
    "open-data",
    "ckan",
    "gobierno",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
]

[project.scripts]
datosgobdo-mcp = "datosgobdo_mcp.server:main"

[project.urls]
Homepage = "https://github.com/alcastaro/datos.gob.do-MCP-server"
Repository = "https://github.com/alcastaro/datos.gob.do-MCP-server"
Portal = "https://datos.gob.do"

[tool.hatch.build.targets.wheel]
packages = ["src/datosgobdo_mcp"]
